--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,8 +5,8 @@ body {
   color: #ffffff;
 }
 
-.page-wrapper {
-
+.content-wrapper {
+  margin-bottom: 20px;
 }
 
 .menu {
@@ -37,6 +37,24 @@ header {
 
 h1 {
   font-family: "industry", sans-serif;
+}
+
+h2 {
+  text-align: left;
+  margin-bottom: 40px;
+  margin-left: 35%;
+  font-family: "Mouse Memoirs", sans-serif;
+  -ms-transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg);
+  transform: rotate(-10deg);
+}
+
+h2 .lead {
+  font-size: 1.7em;
+}
+
+h2 .remaining {
+  font-size: 2.1em;
 }
 
 .headline {
@@ -70,6 +88,62 @@ img.mars {
   margin-top: 100px;
   margin-left: 20px;
   width: 80px;
+}
+
+.deco {
+  height: 200px;
+}
+
+.deco img.sun {
+  height: 80px
+  margin-top: 60px;
+  width: 80px;
+}
+
+.deco img.comet {
+  height: 80px;
+  margin-top: 30px;
+  margin-left: 30px;
+  width: 80px;
+}
+
+.abilities {
+  text-align: center
+}
+
+img.how-we-work-illustration {
+  height: 600px;
+  width: 600px;
+}
+
+.tools {
+  background-color: #005F6F;
+  text-align: center
+}
+
+img.tools-we-use-illustration {
+  height: 600px;
+  width: 600px;
+}
+
+footer {
+  background-color: #262A31;
+  text-align: center;
+}
+
+.contact-info {
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
+
+.contact-info a {
+  color: #ffffff;
+}
+
+footer .copyright {
+  font-family: sans-serif;
+  font-size: .75em;
+  padding-bottom: 20px;
 }
 
 
