--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,6 +126,36 @@ img.tools-we-use-illustration {
   width: 600px;
 }
 
+.contact {
+  background-color: #fff8e2;
+  text-align: left;
+}
+
+.contact h2 {
+  color: #e17e34;
+}
+
+.contact .contact-form-wrapper {
+  background: url("../images/contact-form-background.svg") no-repeat center;
+  height: 500px;
+  padding-top: 75px;
+  width: 100%;
+}
+
+.contact form {
+  margin: 0 auto;
+  width: 300px;
+}
+
+.contact button {
+  margin: 72px 0 0 190px;
+  color: #665d5b;
+  background-color: #dca146;
+  border-color: #665d5b;
+  border-width: 5px;
+  width: 180px;
+}
+
 footer {
   background-color: #262A31;
   text-align: center;
@@ -145,7 +175,3 @@ footer .copyright {
   font-size: .75em;
   padding-bottom: 20px;
 }
-
-
-
-
