--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,7 +21,7 @@ body {
   display: inline-block;
   height: 50px;
   line-height: 50px;
-  margin: 0 10px 0 0;
+  margin: 0 20px 0 0;
 }
 
 .menu ul li a, .menu ul li a:visited {
@@ -58,46 +58,62 @@ h2 .remaining {
 }
 
 .headline {
+  background: url("../images/star-field.svg");
   height: 200px;
 }
 
-img.earth {
+.headline img.earth {
   height: 100px;
   margin-top: 20px;
   margin-left: 10px;
   width: 100px;
 }
 
-.logo-and-name {
+.headline .logo-and-name {
   margin-top: 40px;
   overflow: auto;
   text-align: center;
 }
 
-.logo-and-name h1 {
+.headline .logo-and-name h1 {
   font-size: 1.5em;
 }
 
-img.logo {
+.headline img.logo {
   height: 90px;
   width: 90px;
 }
 
-img.mars {
+.headline img.mars {
   height: 80px;
   margin-top: 100px;
   margin-left: 20px;
   width: 80px;
 }
 
+.headline img.quasar {
+  height: 40px
+  margin-top: 10px;
+  width: 40px;
+}
+
 .deco {
+  background: url("../images/star-field.svg");
   height: 200px;
 }
 
 .deco img.sun {
   height: 80px
   margin-top: 60px;
+  margin-left: 60px;
   width: 80px;
+}
+
+.deco img.quasar {
+  height: 30px
+  margin-top: 10px;
+  margin-left: 90px;
+  width: 30px;
 }
 
 .deco img.comet {
@@ -108,12 +124,37 @@ img.mars {
 }
 
 .abilities {
+  background: url("../images/star-field.svg");
   text-align: center
 }
 
-img.how-we-work-illustration {
+.abilities img.what-we-do-illustration {
   height: 600px;
   width: 600px;
+  z-index: 2;
+}
+
+.abilities img.quasar1 {
+  height: 60px;
+  position: absolute;
+  top: 90px;
+  width: 60px;
+  z-index: 4;
+}
+
+.abilities img.quasar2 {
+  height: 50px;
+  width: 50px;
+  z-index: 4;
+  position: absolute;
+}
+
+.abilities img.quasar3 {
+  height: 30px;
+  position: absolute;
+  top: 50px;
+  width: 30px;
+  z-index: 6;
 }
 
 .tools {
@@ -129,6 +170,7 @@ img.tools-we-use-illustration {
 .contact {
   background-color: #fff8e2;
   text-align: left;
+  padding-bottom: 30px;
 }
 
 .contact h2 {
@@ -156,21 +198,20 @@ img.tools-we-use-illustration {
   width: 180px;
 }
 
-footer {
+.footer {
   background-color: #262A31;
   text-align: center;
 }
 
-.contact-info {
-  padding-top: 50px;
-  padding-bottom: 20px;
+.footer .contact-info {
+  padding-bottom: 50px;
 }
 
-.contact-info a {
+.footer .contact-info a {
   color: #ffffff;
 }
 
-footer .copyright {
+.footer .copyright {
   font-family: sans-serif;
   font-size: .75em;
   padding-bottom: 20px;
