--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://use.typekit.net/cht3zww.css");
+@import url('https://fonts.googleapis.com/css?family=Mouse+Memoirs');
 
 body {
   background-color: #2A3038;
@@ -138,7 +139,17 @@ h2 .remaining {
   height: 60px;
   position: absolute;
   top: 90px;
+  left: 70px;
   width: 60px;
+  z-index: 4;
+}
+
+.abilities img.comet {
+  height: 80px;
+  left: 80px;
+  position: absolute;
+  top: 500px;
+  width: 80px;
   z-index: 4;
 }
 
