--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -2,6 +2,7 @@
   background-color: #fff8e2;
   text-align: left;
   padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .contact h2 {
@@ -10,6 +11,7 @@
 
 .contact .contact-form-wrapper {
   background: url("../images/contact-form-background.svg") no-repeat center;
+  height: 500px;
   padding-top: 75px;
   width: 100%;
 }
