--- a/assets/css/tools.css
+++ b/assets/css/tools.css
@@ -3,16 +3,38 @@
   text-align: center;
 }
 
+.tools .tools-header {
+  height: 200px;
+}
+
 .tools img.tools-we-use-illustration {
-  height: 600px;
+  height: 300px;
   width: 600px;
+  position: absolute;
+  left: 10%;
+  z-index: 3;
+}
+
+.tools h2 {
+  position: absolute;
+  left: 2%;
+  z-index: 3;
+}
+
+.tools img.tool-circle {
+  height: 100px;
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+.tools p {
+  font-family: "helvetica", "sans-serif";
 }
 
 @media(max-width: 768px) {
-  .tools  img.tools-we-use-illustration {
-    font-family: "industry", "sans-serif";
-    height: 100%;
-    width: 100%;
+  .tools h2 {
+    position: absolute;
+    z-index: 3;
   }
 }
 
